<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SignInActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="0dp"
                android:backgroundTint="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/days_one"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/write_out"
                    android:textAlignment="center"
                    android:textColor="#FB8C00"
                    android:textSize="50sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="casual"
                    android:text="Sign in"
                    android:textAlignment="center"
                    android:textColor="#FB8C00"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSignInEmail"
                        android:layout_width="300dp"
                        android:layout_height="52dp"
                        android:layout_gravity="center"
                        android:drawablePadding="5dp"
                        android:textAlignment="center"
                        android:hint="@string/email"
                        android:drawableLeft="@drawable/ic_baseline_mail_24"
                        android:drawableTint="@color/baseOrange"
                        android:autofillHints="emailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tvPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSignInPassword"
                        android:layout_width="300dp"
                        android:layout_height="52dp"
                        android:layout_gravity="center"
                        android:drawableTint="@color/baseOrange"
                        android:textAlignment="center"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:hint="@string/password" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvNewUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:text="@string/new_user_sign_up"
                    android:textColor="#F4511E"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/buttonshape"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="35dp"
                    android:text="Forgot Password ?"
                    android:textColor="#F4511E"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/orangebottomtransmodified2" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
