<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:fontFamily="casual"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/write_out"
                android:textAlignment="center"
                android:textColor="#FB8C00"
                android:textSize="50sp"
                android:textStyle="bold|italic"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="#FB8C00"
                android:textStyle="italic|bold"
                android:fontFamily="casual"
                android:textAlignment="center"
                android:layout_marginTop="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/we_ll_send_an_email_to_this_email_you_can_change_you_password_form_there"
                android:textAlignment="center"
                android:textSize="15sp"
                android:layout_marginTop="50dp"
                android:textStyle="bold"
                android:fontFamily="casual"/>
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp">
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="300dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
                     android:hint="Registered Email"
                     android:id="@+id/etForgetEmail"/>
             </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSendEmail"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/buttonshape"
                android:backgroundTint="#FF8800"
                android:text="@string/send_email"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back to SignIn"
                android:layout_gravity="end"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:textColor="#FF8800"
                android:id="@+id/tvBackToSignIn"/>

        </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:duplicateParentState="false"
                android:scaleType="fitXY"
                android:scaleY="1"
                android:src="@drawable/orangebottomtransmodified" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>